# material-rust-template

./: Cargo.toml  README.md  build.rs  index.html
src/: lib.rs  main.rs
ui/: main.slint
ui/views/: main_view.slint
