[package]
name = "my_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "my_app_lib"

[[bin]]
path = "src/main.rs"
name = "my_app"

[dependencies]
slint = { version = "1.13", features = ["backend-android-activity-06"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = { version = "1.13"  }

[package.metadata.android]
package = "dev.slint.material_template"
apk_name = "my_app"

[package.metadata.android.application]
label = "My Application"
